--- a/2018 Robot Project/Dashboard/2018 Main Dashboard/2018 Main Dashboard/Control System.xaml
+++ b/2018 Robot Project/Dashboard/2018 Main Dashboard/2018 Main Dashboard/Control System.xaml
@@ -7,7 +7,13 @@
              mc:Ignorable="d" 
              d:DesignHeight="400" d:DesignWidth="300">
     <Grid Background="Black">
-        <ComboBox Margin="10,55,214,203" FontSize="25" SelectedIndex="0" SelectionChanged="ComboBox_SelectionChanged" Name="Controller_Combobox">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+        <ComboBox FontSize="25" SelectedIndex="0" SelectionChanged="ComboBox_SelectionChanged" Name="Controller_Combobox" Width="300" Height="50" Grid.Row="1">
             <ComboBoxItem Name="Joystick">
                 Joystick
             </ComboBoxItem>
@@ -15,8 +21,7 @@
                 Xbox_Controller
             </ComboBoxItem>
         </ComboBox>
-        <Image Margin="10,190,200,30" Source="Max1071.jpg" Stretch="Fill" Name="Controller_Image"/>
-        
-        <Label Margin="10,0,259,315" Foreground="white" FontSize="22" FontWeight="Bold">Controller Selection</Label>
+        <Image Source="Joystick.jpg" Stretch="Fill" Name="Controller_Image" Grid.Row="3" Width="200" Height="150"/>
+        <Label Foreground="white" FontSize="22" FontWeight="Bold" Width="300" Height="50" Grid.Row="0">Controller Selection</Label>
     </Grid>
 </UserControl>
