--- a/2018 Robot Project/Dashboard/2018 Main Dashboard/2018 Main Dashboard/AlertBox.xaml
+++ b/2018 Robot Project/Dashboard/2018 Main Dashboard/2018 Main Dashboard/AlertBox.xaml
@@ -5,8 +5,24 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:_2018_Main_Dashboard"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
-    <Grid Background="Blue">
-        <Button Width="10" Height=" 10"></Button>
-    </Grid>
+             d:DesignHeight="400" d:DesignWidth="300">
+    <Viewbox>
+        <Grid Background="LightSlateGray">
+            <TextBlock TextAlignment="Center" Background="Black" Margin="0,0,0,76" Foreground="#20C20E">
+         <LineBreak/><LineBreak/>     
+         Caution 1 <LineBreak/><LineBreak/>
+         Caution 2 <LineBreak/><LineBreak/>
+         Caution 3 <LineBreak/><LineBreak/>
+         Caution 4 <LineBreak/><LineBreak/>
+
+            </TextBlock>
+            <Button Name="Swap" Height="50" Width="50" Margin="75,338,175,13" ToolTip="Swap Between Caution/Error" Click="Swap_Button_Click"  >
+                <TextBlock> Swap </TextBlock></Button>
+            <Button Name="Refresh" Height="50" Width="50" Margin="175,338,75,13" ToolTip="Clear Caution/Error">
+                <TextBlock> Refresh </TextBlock>
+            </Button>
+           
+
+        </Grid>
+    </Viewbox>
 </UserControl>
