--- a/2018 Robot Project/Dashboard/2018 Main Dashboard/2018 Main Dashboard/ErrorsWindow.xaml
+++ b/2018 Robot Project/Dashboard/2018 Main Dashboard/2018 Main Dashboard/ErrorsWindow.xaml
@@ -1,18 +1,18 @@
-﻿<Window x:Class="_2018_Main_Dashboard.MainWindow"
+﻿<Window x:Class="_2018_Main_Dashboard.ErrorsWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:_2018_Main_Dashboard"
         mc:Ignorable="d"
-        Title="MainWindow" Width="800" Height="640">
-    <Window.Resources>
-        <!--hello world-->
-    </Window.Resources>
+        Title="ErrorsWindow" Height="750" Width="1000" Background="Black">
     <Viewbox>
         <Grid>
-            <local:Control_System Margin="0, 0, 500, 240"/>
-            <local:AlertBox Margin="446,0,0,225"/>
+            <TextBlock Background="Black" Foreground="Red" FontSize="20" MinHeight="750" MinWidth='1000' Margin="0,0,0,0" TextAlignment="Center"> 
+                <LineBreak/>
+                testing
+            </TextBlock>
         </Grid>
+        
     </Viewbox>
 </Window>
