--- a/2018 Robot Project/Dashboard/2018 Main Dashboard/2018 Main Dashboard/Control System.xaml
+++ b/2018 Robot Project/Dashboard/2018 Main Dashboard/2018 Main Dashboard/Control System.xaml
@@ -23,6 +23,9 @@
         </ComboBox>
         <Image Source="Joystick.jpg" Stretch="Fill" Name="Controller_Image" Grid.Row="2" Width="150" Margin="77,0,73,158"/>
         <Label Foreground="white" FontSize="22" FontWeight="Bold" Height="50" Grid.Row="0" Margin="33,0,35,0">Controller Selection</Label>
-        <Rectangle Name="A" Fill="Gray" Margin="0,147,0,10" Grid.Row="2"></Rectangle>
+        <Rectangle Name="A" Fill="Gray" Margin="0,145,0,12" Grid.Row="2"></Rectangle>
+        <TextBlock Name="X" Grid.Row="3" Background="Green" Margin="0,0,200,0" Text="XAxis" TextAlignment="Center"/>
+        <TextBlock Name="Y" Grid.Row="3" Background="Yellow" Margin="100,0,100,0" Text="YAxis" TextAlignment="Center"/>
+        <TextBlock Name="Z" Grid.Row="3" Background="Red" Margin="200,0,0,0" Text="ZAxis" TextAlignment="Center"/>
     </Grid>
 </UserControl>
