--- a/2018 Robot Project/Dashboard/2018 Main Dashboard/2018 Main Dashboard/MainWindow.xaml
+++ b/2018 Robot Project/Dashboard/2018 Main Dashboard/2018 Main Dashboard/MainWindow.xaml
@@ -12,7 +12,7 @@
     <Viewbox>
         <Grid>
             <local:Control_System x:Name="ControlWidget" Margin="0, 0, 500, 240"/>
-            <local:AlertBox Margin="446,0,0,225"/>
+            <local:AlertBox x:Name="AlertWidget" Margin="446,0,0,225"/>
         </Grid>
     </Viewbox>
 </Window>
