Kyle typed stuff.

--- a/2018 Robot Project/Dashboard/2018 Main Dashboard/2018 Main Dashboard/MainWindow.xaml
+++ b/2018 Robot Project/Dashboard/2018 Main Dashboard/2018 Main Dashboard/MainWindow.xaml
@@ -9,7 +9,7 @@
     <Window.Resources>
         <!--hello world-->
     </Window.Resources>
-    <Border Background="#20C20E">
+    <Border Background="LightSlateGray">
         <Viewbox>
             <Grid Width="1300" Height="700">
                 <Grid.ColumnDefinitions>
