tom couldn't handle lowerI have to commit and push AGAIN!!1!11!!111!!

--- a/2018 Robot Project/Dashboard/2018 Main Dashboard/2018 Main Dashboard/AutoSwitchControl.xaml
+++ b/2018 Robot Project/Dashboard/2018 Main Dashboard/2018 Main Dashboard/AutoSwitchControl.xaml
@@ -29,10 +29,10 @@
                 Both
             </ComboBoxItem>
         </ComboBox>
-        <TextBlock Name="Position" Margin="-27,32,102,5" TextAlignment="Center">
+        <TextBlock Name="PositionText" Margin="-27,32,102,5" TextAlignment="Center">
             Position
         </TextBlock>
-        <TextBlock Name="Goal" Margin="64,32,0,5" TextAlignment="Center">
+        <TextBlock Name="GoalText" Margin="64,32,0,5" TextAlignment="Center">
             Goal
         </TextBlock>
     </Grid>
